--- a/public/bower.json
+++ b/public/bower.json
@@ -10,6 +10,8 @@
     "angular-route": "~1.4.0",
     "angular-loader": "~1.4.0",
     "html5-boilerplate": "~5.2.0",
-    "angular-google-maps": "~2.2.1"
+    "angular-google-maps": "~2.2.1",
+    "lodash": "~3.10.1",
+    "angular-simple-logger": "~0.1.5"
   }
 }
