--- a/public/bower.json
+++ b/public/bower.json
@@ -13,5 +13,8 @@
     "angular-google-maps": "~2.2.1",
     "lodash": "~3.10.1",
     "angular-simple-logger": "~0.1.5"
+  },
+  "resolutions": {
+    "angular-simple-logger": "~0.0.1"
   }
 }
